Added more details about server changes